@@ -1,6 +1,7 @@
-SCM_BENCHMARKS = benchmarks/0-reference.bm			\
-	         benchmarks/continuations.bm                    \
-                 benchmarks/if.bm                               \
-                 benchmarks/logand.bm
+SCM_BENCHMARKS = benchmarks/0-reference.bm	\
+	         benchmarks/continuations.bm	\
+                 benchmarks/if.bm		\
+                 benchmarks/logand.bm		\
+		 benchmarks/read.bm
 
 EXTRA_DIST = guile-benchmark lib.scm $(SCM_BENCHMARKS)
